advanced types done

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     </script>
     <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <input type="text" id="user-input" />
+  </body>
 </html>
