--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <input type="text" id="user-input" />
+    <div id="app"></div>
+    <button>Click me</button>
+    <form>
+      <input type="text" placeholder="Course title" id="title" />
+      <input type="text" placeholder="Course price" id="price" />
+      <button type="submit">Save</button>
+    </form>
   </body>
 </html>
